// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Answer should render with checked styles 1`] = `
.emotion-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  width: 50%;
  padding: 0 12px 12px 0;
  cursor: pointer;
  font-weight: 700;
  opacity: 1;
  color: #FF7559;
}

.emotion-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

.emotion-0::before,
.emotion-0::after {
  content: none;
}

<input
  checked=""
  class="emotion-0 emotion-1"
  id="radio-button_2"
  name="group"
  type="radio"
  value="1"
/>
`;

exports[`Answer should render with correct styles 1`] = `
.emotion-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  width: 50%;
  padding: 0 12px 12px 0;
  cursor: pointer;
  opacity: 1;
  color: #49B85B;
}

.emotion-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

.emotion-0::before,
.emotion-0::after {
  content: none;
}

<input
  class="emotion-0 emotion-1"
  id="radio-button_3"
  name="group"
  type="radio"
  value="1"
/>
`;

exports[`Answer should render with default styles 1`] = `
.emotion-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  width: 50%;
  padding: 0 12px 12px 0;
  cursor: pointer;
}

.emotion-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

.emotion-0::before,
.emotion-0::after {
  content: none;
}

<input
  class="emotion-0 emotion-1"
  id="radio-button_1"
  name="group"
  type="radio"
  value="1"
/>
`;

exports[`Answer should render with incorrect styles 1`] = `
.emotion-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  width: 50%;
  padding: 0 12px 12px 0;
  cursor: pointer;
}

.emotion-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

.emotion-0::before,
.emotion-0::after {
  content: none;
}

<input
  class="emotion-0 emotion-1"
  id="radio-button_4"
  name="group"
  type="radio"
  value="1"
/>
`;
